@@ -1,30 +1,16 @@
-/*
- *  CPAchecker is a tool for configurable software verification.
- *  This file is part of CPAchecker.
- *
- *  Copyright (C) 2007-2017  Dirk Beyer
- *  All rights reserved.
- *
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
- *
- *
- *  CPAchecker web page:
- *    http://cpachecker.sosy-lab.org
- */
+// This file is part of CPAchecker,
+// a tool for configurable software verification:
+// https://cpachecker.sosy-lab.org
+//
+// SPDX-FileCopyrightText: 2007-2020 Dirk Beyer <https://www.sosy-lab.org>
+//
+// SPDX-License-Identifier: Apache-2.0
+
 package org.sosy_lab.cpachecker.cpa.predicate;
 
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Preconditions.checkState;
+import static com.google.common.collect.FluentIterable.from;
 import static org.sosy_lab.cpachecker.cpa.predicate.PredicateAbstractState.getPredicateState;
 import static org.sosy_lab.cpachecker.cpa.predicate.PredicateAbstractState.mkAbstractionState;
 import static org.sosy_lab.cpachecker.cpa.predicate.SlicingAbstractionsUtils.buildPathFormula;
@@ -41,9 +27,11 @@ import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.stream.Collectors;
+import org.sosy_lab.common.collect.PersistentList;
 import org.sosy_lab.common.configuration.Configuration;
 import org.sosy_lab.common.configuration.InvalidConfigurationException;
 import org.sosy_lab.common.configuration.Option;
@@ -52,7 +40,6 @@ import org.sosy_lab.common.log.LogManager;
 import org.sosy_lab.common.time.Timer;
 import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
 import org.sosy_lab.cpachecker.core.CPAcheckerResult.Result;
-import org.sosy_lab.cpachecker.core.interfaces.AbstractState;
 import org.sosy_lab.cpachecker.core.interfaces.Statistics;
 import org.sosy_lab.cpachecker.core.interfaces.StatisticsProvider;
 import org.sosy_lab.cpachecker.core.reachedset.UnmodifiableReachedSet;
@@ -60,6 +47,7 @@ import org.sosy_lab.cpachecker.cpa.arg.ARGLogger;
 import org.sosy_lab.cpachecker.cpa.arg.ARGReachedSet;
 import org.sosy_lab.cpachecker.cpa.arg.ARGState;
 import org.sosy_lab.cpachecker.cpa.arg.ARGUtils;
+import org.sosy_lab.cpachecker.cpa.predicate.SlicingAbstractionsUtils.AbstractionPosition;
 import org.sosy_lab.cpachecker.cpa.slab.EdgeSet;
 import org.sosy_lab.cpachecker.cpa.slab.SLARGState;
 import org.sosy_lab.cpachecker.exceptions.CPAException;
@@ -165,7 +153,7 @@ public class SlicingAbstractionsStrategy extends RefinementStrategy implements S
   // This boolean is for keeping track of when this shortcut is allowed:
   private Boolean mayShortcutSlicing = null;
 
-  private HashMap<ARGState,ARGState> forkedStateMap;
+  private Map<ARGState, ARGState> forkedStateMap;
 
   public SlicingAbstractionsStrategy(final PredicateCPA pPredicateCpa, final Configuration config)
       throws InvalidConfigurationException {
@@ -271,12 +259,13 @@ public class SlicingAbstractionsStrategy extends RefinementStrategy implements S
       // TODO: refactor so that the caller provides the full abstractionStatesTrace including the
       // root state. Then handling more than one root state would be no problem.
       rootState =
-          rootStates.stream().reduce((x, y) -> x.getStateId() < y.getStateId() ? x : y).get();
-      logger.log(
+          rootStates.stream()
+              .reduce((x, y) -> x.getStateId() < y.getStateId() ? x : y)
+              .orElseThrow();
+      logger.logf(
           Level.INFO,
-          String.format(
-              "More than one root state present!(%s)",
-              rootStates.stream().map(x -> x.getStateId()).collect(Collectors.toList())));
+          "More than one root state present!(%s)",
+          from(rootStates).transform(ARGState::getStateId));
     }
 
     argLogger.log("in refinement before slicing!", pReached.asReachedSet().asCollection());
@@ -284,16 +273,12 @@ public class SlicingAbstractionsStrategy extends RefinementStrategy implements S
     // optimization: Slice all edges only on first iteration
     // After that we only need to slice edges of the states we split
     if (!initialSliceDone) {
-      @SuppressWarnings("unchecked")
       List<ARGState> all =
-          (List<ARGState>)
-              (List<? extends AbstractState>)
-                  pReached
-                      .asReachedSet()
-                      .asCollection()
-                      .stream()
-                      .filter(x -> SlicingAbstractionsUtils.isAbstractionState((ARGState) x))
-                      .collect(Collectors.toList());
+          from(pReached.asReachedSet())
+              .filter(ARGState.class)
+              .filter(SlicingAbstractionsUtils::isAbstractionState)
+              .toList();
+
       sliceEdges(all, infeasiblePartOfART, abstractionStatesTrace, rootState);
       initialSliceDone = true;
     } else {
@@ -323,16 +308,11 @@ public class SlicingAbstractionsStrategy extends RefinementStrategy implements S
         changed = SlicingAbstractionsUtils.performDynamicBlockEncoding(pReached);
         if (changed) {
           pReached.recalculateReachedSet(rootState);
-          @SuppressWarnings("unchecked")
           List<ARGState> all =
-              (List<ARGState>)
-                  (List<? extends AbstractState>)
-                      pReached
-                          .asReachedSet()
-                          .asCollection()
-                          .stream()
-                          .filter(x -> SlicingAbstractionsUtils.isAbstractionState((ARGState) x))
-                          .collect(Collectors.toList());
+              from(pReached.asReachedSet())
+                  .filter(ARGState.class)
+                  .filter(SlicingAbstractionsUtils::isAbstractionState)
+                  .toList();
           sliceEdges(all, null, null, null);
         }
       }
@@ -374,13 +354,13 @@ public class SlicingAbstractionsStrategy extends RefinementStrategy implements S
   private void sliceEdges(final List<ARGState> pChangedElements,
       ARGState pInfeasiblePartOfART, List<ARGState> pAbstractionStatesTrace, ARGState rootState)
       throws InterruptedException, CPAException {
-    final List<ARGState> allChangedStates;
-    //get the corresponding forked states:
-    allChangedStates = pChangedElements.stream()
-        .map(x -> forkedStateMap.get(x))
-        .filter(x -> x != null)
-        .filter(x -> !pChangedElements.contains(x))
-        .collect(Collectors.toList());
+    // get the corresponding forked states:
+    final List<ARGState> allChangedStates =
+        pChangedElements.stream()
+            .map(x -> forkedStateMap.get(x))
+            .filter(x -> x != null)
+            .filter(x -> !pChangedElements.contains(x))
+            .collect(Collectors.toCollection(ArrayList::new));
     allChangedStates.addAll(pChangedElements);
 
     List<ARGState> priorAbstractionStates = new ArrayList<>();
@@ -398,9 +378,10 @@ public class SlicingAbstractionsStrategy extends RefinementStrategy implements S
     // Therefore we need to make sure that allChangedStates at least contains
     // all abstraction states on the error path:
     if (minimalSlicing) {
-      allChangedStates.addAll(pAbstractionStatesTrace.stream().
-          filter(x->!allChangedStates.contains(x)).
-          collect(Collectors.toList()));
+      allChangedStates.addAll(
+          pAbstractionStatesTrace.stream()
+              .filter(x -> !allChangedStates.contains(x))
+              .collect(ImmutableList.toImmutableList()));
     }
 
     for (ARGState currentState : allChangedStates) {
@@ -411,11 +392,10 @@ public class SlicingAbstractionsStrategy extends RefinementStrategy implements S
         SlicingAbstractionsUtils.removeOutgoingEdgesWithLocationMismatch((SLARGState) currentState);
       }
 
-      Map<ARGState, List<ARGState>> segmentMap =
+      Map<ARGState, PersistentList<ARGState>> segmentMap =
           SlicingAbstractionsUtils.calculateOutgoingSegments(currentState);
       Map<ARGState, Boolean> infeasibleMap = new HashMap<>();
-      Set<ARGState> segmentStateSet = new HashSet<>();
-      for (Map.Entry<ARGState,List<ARGState>> entry : segmentMap.entrySet()) {
+      for (Map.Entry<ARGState, PersistentList<ARGState>> entry : segmentMap.entrySet()) {
         ARGState key = entry.getKey();
         List<ARGState> segment = entry.getValue();
         boolean infeasible;
@@ -434,45 +414,55 @@ public class SlicingAbstractionsStrategy extends RefinementStrategy implements S
         }
 
         infeasibleMap.put(key, infeasible);
-        segmentStateSet.addAll(segment);
       }
-      for (Map.Entry<ARGState, Boolean> entry : infeasibleMap.entrySet()) {
-        ARGState key = entry.getKey();
-        boolean isInfeasible = entry.getValue();
-        List<ARGState> segment = segmentMap.get(key);
-        if (!isInfeasible) {
-          segmentStateSet.removeAll(segment);
-        } else {
-          if (key.getParents().contains(currentState)) {
-            // checking for segement.size()==0 would not be enough, because we could also
-            // have this:
-            // 1-->A-->2
-            // |       ^
-            // \-------|
-            key.removeParent(currentState); // this removes 1->2 in the above example
-          }
-          if (!Collections.disjoint(key.getParents(), segment)) {
-            // Consider the following case, where abstraction states have numbers and
-            // non-abstractions
-            // states are shown as letters:
-            // 1-->A-->2
-            //     \-->3
-            // if 1~>3 is infeasible, but 1~>2 is not, we cannot remove A, so we need to cut A->3:
-            for (ARGState s :
-                Sets.intersection(Sets.newHashSet(key.getParents()), Sets.newHashSet(segment))) {
-              key.removeParent(s); // this is the cut of A->3 in the example of the comment above
-            }
-          }
-        }
-      }
-
-      for (ARGState toRemove : segmentStateSet) {
-        detachFromParentsInARG(toRemove);
-      }
+      slice0(currentState, segmentMap, infeasibleMap);
     }
   }
 
-  private void detachFromParentsInARG(final ARGState toRemove) {
+  private static void slice0(
+      ARGState currentState,
+      Map<ARGState, PersistentList<ARGState>> segmentMap,
+      Map<ARGState, Boolean> infeasibleMap) {
+    Set<ARGState> segmentStateSet = new HashSet<>();
+    for (List<ARGState> segment : segmentMap.values()) {
+      segmentStateSet.addAll(segment);
+    }
+    for (Map.Entry<ARGState, Boolean> entry : infeasibleMap.entrySet()) {
+      ARGState key = entry.getKey();
+      boolean isInfeasible = entry.getValue();
+      List<ARGState> segment = segmentMap.get(key);
+      if (!isInfeasible) {
+        segmentStateSet.removeAll(segment);
+      } else {
+        if (key.getParents().contains(currentState)) {
+          // checking for segement.size()==0 would not be enough, because we could also
+          // have this:
+          // 1-->A-->2
+          // |       ^
+          // \-------|
+          key.removeParent(currentState); // this removes 1->2 in the above example
+        }
+        if (!Collections.disjoint(key.getParents(), segment)) {
+          // Consider the following case, where abstraction states have numbers and
+          // non-abstractions
+          // states are shown as letters:
+          // 1-->A-->2
+          //     \-->3
+          // if 1~>3 is infeasible, but 1~>2 is not, we cannot remove A, so we need to cut A->3:
+          for (ARGState s :
+              Sets.intersection(new HashSet<>(key.getParents()), new HashSet<>(segment))) {
+            key.removeParent(s); // this is the cut of A->3 in the example of the comment above
+          }
+        }
+      }
+    }
+
+    for (ARGState toRemove : segmentStateSet) {
+      detachFromParentsInARG(toRemove);
+    }
+  }
+
+  private static void detachFromParentsInARG(final ARGState toRemove) {
     // avoid concurrent modification by making a copy:
     for (ARGState parent : ImmutableList.copyOf(toRemove.getParents())) {
       toRemove.removeParent(parent);
@@ -557,7 +547,17 @@ public class SlicingAbstractionsStrategy extends RefinementStrategy implements S
 
     SSAMap startSSAMap = SSAMap.emptySSAMap().withDefault(1);
     PointerTargetSet startPts = PointerTargetSet.emptyPointerTargetSet();
-    BooleanFormula formula = buildPathFormula(start, stop, segmentList, startSSAMap, startPts, solver, pfmgr, true).getFormula();
+    BooleanFormula formula =
+        buildPathFormula(
+                start,
+                stop,
+                segmentList,
+                startSSAMap,
+                startPts,
+                solver.getFormulaManager(),
+                pfmgr,
+                AbstractionPosition.BOTH)
+            .getFormula();
     try (ProverEnvironment thmProver = solver.newProverEnvironment(ProverOptions.GENERATE_MODELS)) {
       thmProver.push(formula);
       stats.increaseSolverCallCounter();
@@ -584,32 +584,32 @@ public class SlicingAbstractionsStrategy extends RefinementStrategy implements S
     for (int i = 0; i< abstractionStatesTrace.size()-1; i++) {
       ARGState currentState = abstractionStatesTrace.get(i);
       ARGState nextState = abstractionStatesTrace.get(i+1);
-      if (currentState == parent) {
+      if (currentState.equals(parent)) {
         ARGState s = forkedStateMap.get(nextState);
-        if (s == child && pChangedElements.contains(nextState)) {
+        if (Objects.equals(s, child) && pChangedElements.contains(nextState)) {
           return true;
         }
       }
     }
 
     // root state needs special treatment:
-    if (parent == rootState) {
+    if (Objects.equals(parent, rootState)) {
       ARGState firstAfterRoot = abstractionStatesTrace.get(0);
       ARGState s = forkedStateMap.get(firstAfterRoot);
-      if (s == child &&  pChangedElements.contains(firstAfterRoot)) {
+      if (Objects.equals(s, child) && pChangedElements.contains(firstAfterRoot)) {
         return true;
       }
     }
 
     // beginning of infeasible part at end of trace needs special treatment:
-    if (infeasiblePartOfART == child) {
+    if (Objects.equals(infeasiblePartOfART, child)) {
       int i = abstractionStatesTrace.indexOf(infeasiblePartOfART);
       if (i>0) {
-        if (abstractionStatesTrace.get(i-1) == parent) {
+        if (Objects.equals(abstractionStatesTrace.get(i - 1), parent)) {
           return true;
         }
       } else {
-        if (parent == rootState) {
+        if (Objects.equals(parent, rootState)) {
           return true;
         }
       }
